2004-12-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the gossip branch.

2004-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added evince to extras.

2004-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-nettool has been branched.

2004-12-22  Christian Persch  <chpe@cvs.gnome.org>

	* translation-status.xml: Switch epiphany-extensions to HEAD.

2004-12-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libwnck has been branched.

2004-12-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gpdf has been branched.

2004-12-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: sound-juicer has been proposed.

2004-12-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added "proposed" section.

2004-12-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: nautilus-cd-burner has been branched.

2004-12-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnomeprint and libgnomeprintui
	have been branched.

2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added goobox to extras.

2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Move gnome-doc-utils to
	gnome-2.10/desktop (dependency of Yelp).

2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Move gnome-menus to gnome-2.10/desktop.

2004-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added f-spot to extras.

2004-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf and gnome-netstatus
	have been branched.

2004-11-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched.

2004-11-16  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Change gtkhtml 2.10 POT filename.

2004-11-15  Christian Rose  <menthos@menthos.com>
