@@ -857,31 +857,31 @@
       <component name="gimp" dir="gimp" group="extras">
         <podir dir="po"/>
         <potname name="gimp20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gimp-2-2"/>
         <regenerate/>
       </component>
       <component name="gimp-libgimp" dir="gimp" group="extras">
         <podir dir="po-libgimp"/>
         <potname name="gimp20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gimp-2-2"/>
         <regenerate/>
       </component>
       <component name="gimp-plug-ins" dir="gimp" group="extras">
         <podir dir="po-plug-ins"/>
         <potname name="gimp20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gimp-2-2"/>
         <regenerate/>
       </component>
       <component name="gimp-script-fu" dir="gimp" group="extras">
         <podir dir="po-script-fu"/>
         <potname name="gimp20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gimp-2-2"/>
         <regenerate/>
       </component>
       <component name="gimp-tips" dir="gimp" group="extras">
         <podir dir="tips"/>
         <potname name="gimp14-tips.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gimp-2-2"/>
       </component>
     </version>
   </module>
