@@ -1,3 +1,7 @@
+2004-12-29  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Changed the gimp branch.
+
 2004-12-27  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Changed the gossip branch.
